styles.css
/* ... */
.header-display > a {
    text-align: left;
    padding-left: 18px;
    text-decoration: none;
    font-size: 16px;
    color: var(--white);
    line-height: 0.7;
    font-family: 'Karla', sans-serif;
    font-weight: 700;
}

.header-display > a:not(:last-child) {
    margin-bottom: 31.15px;
}

/* Animations for Submenus */

@keyframes open {
    0% {
        height: 0px;
    }

    30% {
        height: 30px;
    }

    60% {
        height: 73px;
    }

    90% {
        height: 110px;
    }
    100% {
        height: auto;
    }
} 

@keyframes growDown {
    0% {
        transform: scaleY(0);
        transform: scaleX(0);
    }
    80% {
        transform: scaleY(1.1);
        transform: scaleX(1.1);
    }
    100% {
        transform: scaleY(1);
        transform: scaleX(1);
    }
}

/*Submenu Styles */

.intro-mobile-header {
    margin-top: 150px;
    padding-top: 0;
    margin-bottom: 15px;
}

li {
    display: inline-block;
}

ul {
    position: relative;
    top: 2px;
}

.submenu-option {
    width: 69%;
    position: relative;
    top: -7px;
    left: 11px;
    color: var(--gold);
    cursor: pointer;
    font-size: 15px;
    font-family: 'Karla', sans-serif;
    font-weight: 700;
}

/* animations for Hamburger menu overlay */

@keyframes fade-in {
    from {
        visibility: hidden;
        opacity: 0;
    }
    1% {
        visibility: visible;
        opacity: 0;
    }
    to {
        visibility: visible;
        opacity: 1;
    }
}

@keyframes fade-out {
    from {
        visibility: visible;
        opacity: 1;
    }
    99% {
        visibility: visible;
        opacity: 0;
    }
    to {
        visibility: hidden;
        opacity: 0;
    }
}

/* animations for overlay2 */
@keyframes fade-in2 {
    from {
        visibility: hidden;
        opacity: 0;
    }
    1% {
        visibility: visible;
        opacity: 0;
    }
    to {
        visibility: visible;
        opacity: 0.7;
    }
}

@keyframes fade-out2 {
    from {
        visibility: visible;
        opacity: 0.7;
    }
    99% {
        visibility: visible;
        opacity: 0;
    }
    to {
        visibility: hidden;
        opacity: 0;
    }
}

/* Helper classes for animations */

.fade-in {
    animation: fade-in 200ms ease-in-out forwards;
}

.fade-out {
    animation: fade-out 200ms ease-in-out forwards;
}

.fade-in2 {
    animation: fade-in2 200ms ease-in-out forwards;
}

.fade-out2 {
    animation: fade-out2 200ms ease-in-out forwards;
}

.has-fade {
    visibility: hidden;
}

.has-fade2 {
    visibility: hidden;
}

/* Media Queries */

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {

    .main {
        height: 100%;
    }

    .main::after {
        top: 78%;
        left: calc(97% - 375px / 2);
    }

    .intro-header {
        font-size: 50px;
    }

    .header-menu {
        margin-left: 92%;
    }

    .header-menu > span {
        width: 30px;
    }

    .intro-header {
        margin-left: 96px;
        margin-top: -32px;
    }

    .intro-paragraph {
        width: 85%;
        margin-left: 95px;
        padding-left: 0;
        padding-right: 0;
        font-size: 23px;
        margin-bottom: 16px;
    }

    .skills {
        width: 80%;
        margin-left: 75px;
    }

    .languages-container, .libraries-container, .frameworks-container, .tools-container {
        margin-left: 21px;
    }

    .projects-header {
        margin-left: 95px;
        font-size: 45px;
    }

    .skills-header {
        font-size: 45px;
        margin-top: 16px;
    }

    .languages-container > li, .libraries-container > li, .frameworks-container > li, .tools-container > li {
        font-size: 22px;
    }

    .project-container {
        margin-left: 72px;
        padding-left: 0px;
        padding-right: 0px;
    }

    .project {
        height: 10vw;
    }

    .contact-header {
        margin-left: 95px;
        font-size: 45px;
        margin-top: -25px;
    }

    .contact-container {
        left: -166px;
        margin-bottom: -63px;
    }

    .tools-container {
        margin-bottom: 16px;
    }

    .projects-header {
        margin-top: 16px;
    }

    .contact-info {
        margin-bottom: 40px;
    }
} 
/* ... */

